# rand

./: Cargo.toml  README.md
.github/workflows/: audit.yml  cd.yml  ci.yml  release.yml
benches/: benchmark.rs  choose.rs  lookups.rs  perf.rs  rand.rs  range.rs
src/: lib.rs  main.rs
