[package]
name = "rand"
version = "0.4.1"
edition = "2021"

[dependencies]
num-format = "0.4.4"
rayon = "1.10.0"
statrs = "0.17.1"

[dependencies.num-traits]
version = "0.2.19"
features = ["i128", "libm"]

[dev-dependencies]
criterion = "0.5.1"
rstest = "0.22.0"

[profile.bench]
debug = true

[[bench]]
name = "choose"
harness = false
required-features = []

[[bench]]
name = "lookups"
harness = false
required-features = []

[[bench]]
name = "rand"
harness = false
required-features = []

[[bench]]
name = "range"
harness = false
required-features = []

[[bench]]
name = "perf"
harness = false
required-features = []
